--- a/.github/workflows/main_weatherinsights.yml
+++ b/.github/workflows/main_weatherinsights.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - weatherInsights
+name: Build and deploy Python app to Azure Web App - weatherinsights
 
 on:
   push:
@@ -58,6 +58,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'weatherInsights'
+          app-name: 'weatherinsights'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E204F739EAA543FAA1A3D92FE271FC3F }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_16204F2729544534B7A0A56D47BA597E }}
